--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-pwa": "^5.6.0",
+    "openai": "^4.72.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
