--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "next": "15.0.3",
     "next-pwa": "^5.6.0",
     "openai": "^4.72.0",
+    "pino-pretty": "^13.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
