--- a/pmswap/package.json
+++ b/pmswap/package.json
@@ -14,8 +14,11 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reown/appkit": "^1.4.1",
+    "@reown/appkit-adapter-ethers5": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "5.7.2",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "openai": "^4.72.0",
