--- a/pmswap/package.json
+++ b/pmswap/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "openai": "^4.72.0",
+    "pino-pretty": "^13.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
