--- a/pmswap/package.json
+++ b/pmswap/package.json
@@ -18,6 +18,7 @@
     "@reown/appkit-adapter-ethers5": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ens-tools": "^0.0.14",
     "ethers": "5.7.2",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
@@ -26,7 +27,9 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "@types/node": "^20",
